--- a/easymodelmanager_web/pubspec.yaml
+++ b/easymodelmanager_web/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   theme_provider: ^0.3.3
   shared_preferences: ^0.5.4+8
   shared_preferences_web: ^0.1.2+7
+  validators: ^2.0.0
+  provider: ^4.1.2
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +47,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  assets:
+    - assets/config/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
