--- a/modelmanager_server/database/3b41fb9d-6067-4c1d-a28f-59972483c709/models_config.json
+++ b/modelmanager_server/database/3b41fb9d-6067-4c1d-a28f-59972483c709/models_config.json
@@ -1,1 +1,1 @@
-[{"name":"Model1","versions":[],"lastChange":"2000-01-01T00:00:00.000","description":"123","size":100}]
+[{"name":"Model1","versions":[],"lastChange":"2000-01-01T00:00:00.000","description":"123","size":100},{"name":"Model2","versions":[],"lastChange":"2020-06-18T21:35:46.952Z","description":"12312321","size":0}]
