--- a/easymodelmanager_web/pubspec.yaml
+++ b/easymodelmanager_web/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   validators: ^2.0.0
   provider: ^4.1.2
   crypto: ^2.1.5
-  dio: ^3.0.9
+  filesize: ^1.0.4
 
 dev_dependencies:
   flutter_test:
